--- a/index.html
+++ b/index.html
@@ -130,40 +130,27 @@
                         <div class="list-number">
                             <h1>02</h1>
                         </div><img
-                            src="https://images.unsplash.com/photo-1573167243872-43c6433b9d40?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1469&q=80"
-                            alt="Covid-19 Report">
-                        <div class="project-text">
-                            <p class="project-title">Design Diva Sample Website</p>
-                            <p class="project-disc">Website Designing Agency's Business Website </p>
-                            <div class="btn"><button class="visit"> <a target="_blank" href="">Visit
-                                Website </a> <i class="far fa-long-arrow-right"></i></button></div>
-                        </div>
-                    </div>
-                    <div class="project">
-                        <div class="list-number">
-                            <h1>03</h1>
-                        </div><img
                             src="https://images.unsplash.com/photo-1492144534655-ae79c964c9d7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=983&q=80"
                             alt="Top10List">
                         <div class="project-text">
                             <p class="project-title">Cartoon Car Game </p>
                             <p class="project-disc">Car game Made to show logic building skills
                             </p>
-                            <div class="btn"><button class="visit" ><a href="" target="_blank">Visit
+                            <div class="btn"><button class="visit" ><a href="https://lakshyacargame.netlify.app/" target="_blank">Visit
                                 Website </a><i class="far fa-long-arrow-right"></i></button></div>
                         </div>
                     </div>
                     <div class="project">
                         <div class="list-number">
-                            <h1>04</h1>
+                            <h1>03</h1>
                         </div><img
-                            src="https://images.unsplash.com/photo-1581009146145-b5ef050c2e1e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
-                            alt="Epic Player">
+                            src="https://images.unsplash.com/photo-1573167243872-43c6433b9d40?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1469&q=80"
+                            alt="Covid-19 Report">
                         <div class="project-text">
-                            <p class="project-title">Gym Website Sample</p>
-                            <p class="project-disc"> Website For A Gym To extend its reach</p>
-                            <div class="btn"><button class="visit" data-ref="http://epicplayer.cf/"><a href="" target="_blank"> Visit Website</a> <i
-                                        class="far fa-long-arrow-right"></i></button></div>
+                            <p class="project-title">Design Diva Sample Website</p>
+                            <p class="project-disc">Website Designing Agency's Business Website </p>
+                            <div class="btn"><button class="visit"> <a target="_blank" href="https://designdiva.netlify.app/">Visit
+                                Website </a> <i class="far fa-long-arrow-right"></i></button></div>
                         </div>
                     </div>
                     </div>
