--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baffle.js/0.2.1/baffle.min.js"></script>
     <link rel="stylesheet" href="style/styles1.css">
     <link rel="stylesheet" media="screen and (max-width: 900px )" href="style/phone.css">
-    <link rel="stylesheet" media="screen and (max-width: 1200px ) and (min-width:901px)" href="style/tablet.css">
+    <link rel="stylesheet" media="screen and (max-width: 900px )" href="style/phoneLarge.css">
+    <link rel="stylesheet" media="screen and (max-width: 1000px ) and (min-width:901px)" href="style/tablet.css">
+    <link rel="stylesheet" media="screen and (max-width: 1300px ) and (min-width:1001px)" href="style/largetablet.css">
     <title>Lakshya Kumrawat | Full-Stack Developer</title>
 </head>
 
