--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <!-- <meta name="twitter:url" content="amankumar.ml"> -->
     <meta name="author" content=" Lakshya Kumrawat">
     <meta name="description" content="A 16-year-old passionate Full-Stack Developer from India.">
+    <meta name="google-site-verification" content="WhJoPsq9RuFbk9Quv2zjHbtVbL2kPvoGB4cX41DolG8" />
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/assets/favicon/apple-icon-72x72.png">
@@ -41,6 +42,7 @@
     <link rel="stylesheet" media="screen and (max-width: 900px )" href="style/phoneLarge.css">
     <link rel="stylesheet" media="screen and (max-width: 1000px ) and (min-width:901px)" href="style/tablet.css">
     <link rel="stylesheet" media="screen and (max-width: 1300px ) and (min-width:1001px)" href="style/largetablet.css">
+    
     <title>Lakshya Kumrawat | Full-Stack Developer</title>
 </head>
 
