Trying to solve error

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <meta property="og:url" content="LakshyaKumrawat.github.io">
     <meta property="og:description" content="A 16-year-old passionate Full-Stack Developer from India.">
     <meta property="article:publisher" content="LakshyaKumrawat.github.io">
-    <!-- <meta name="twitter:card" content="summary"> -->
-    <!-- <meta name="twitter:site" content="@amankumar062"> -->
-    <!-- <meta name="twitter:title" content="Aman Kumar | Full-Stack Developer"> -->
-    <!-- <meta name="twitter:description" content="A 21-year-old passionate Full-Stack Developer from India."> -->
-    <!-- <meta name="twitter:url" content="amankumar.ml"> -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@LakshyaKumrawat">
+    <meta name="twitter:title" content="Lakshya Kumrawat | Full Stack Web Developer">
+    <meta name="twitter:description" content="A 16-year-old passionate Full-Stack Developer from India.">
+    <meta name="twitter:url" content="LakshyaKumrawat.netlify.app">
     <meta name="author" content=" Lakshya Kumrawat">
     <meta name="description" content="A 16-year-old passionate Full-Stack Developer from India.">
     <meta name="google-site-verification" content="WhJoPsq9RuFbk9Quv2zjHbtVbL2kPvoGB4cX41DolG8" />
@@ -108,7 +108,7 @@
                         term goal is to become a more responsible and knowledgeable personality and in a respectable
                         position in my Field.</p>
                     <p>When not working or futzing around with code, I study About Finance and Stock Market as i think that Investment is one of the essential things that one should definitly know.</p>
-                    <p>I'm available for work, <a href="mailto:lakshyakumrawatbusiness@gmail.com" target="_blank">Mail Me </a> On lakshyakumrawatbusiness@gmail.com <br></p>
+                    <p>I'm available for work, <a href="mailto:lakshyakumrawatbusiness@gmail.com" target="_blank">Mail Me </a> <br></p>
                 </div>
             </div>
         </div>
