--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="/assets/favicon/manifest.json">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.14.0/css/all.css">
-    <link rel="stylesheet" type="text/css" href="style/style.css">
+    <meta name="google-site-verification" content="CL9BofuyoUPJmSMwxBMyFYAHoHLdnRaYrA8DhWH9-dk" />
+<link rel="stylesheet" type="text/css" href="style/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baffle.js/0.2.1/baffle.min.js"></script>
     <link rel="stylesheet" href="style/styles1.css">
