--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <meta property="og:site_name" content="Lakshya Kumrawat | Full-Stack Developer">
     <meta property="og:title" content="Lakshya Kumrawat| Full-Stack Developer">
     <meta property="og:url" content="LakshyaKumrawat.github.io">
-    <meta property="og:description" content="A 16-year-old passionate Full-Stack Developer from India.">
+    <meta property="og:description" content="A passionate Full-Stack Developer from India.">
     <meta property="article:publisher" content="LakshyaKumrawat.github.io">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@LakshyaKumrawat">
     <meta name="twitter:title" content="Lakshya Kumrawat | Full Stack Web Developer">
-    <meta name="twitter:description" content="A 16-year-old passionate Full-Stack Developer from India.">
+    <meta name="twitter:description" content="A passionate Full-Stack Developer from India.">
     <meta name="twitter:url" content="LakshyaKumrawat.netlify.app">
     <meta name="author" content=" Lakshya Kumrawat">
-    <meta name="description" content="A 16-year-old passionate Full-Stack Developer from India.">
+    <meta name="description" content="A passionate Full-Stack Developer from India.">
     <meta name="google-site-verification" content="WhJoPsq9RuFbk9Quv2zjHbtVbL2kPvoGB4cX41DolG8" />
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
@@ -98,7 +98,7 @@
             <div class="container">
                 <h1 class="header">About Me</h1>
                 <div class="content">
-                    <p> My self Lakshya, a 16-year-old passionate Full-Stack Web and Python Developer from India.
+                    <p> My self Lakshya, a passionate Full-Stack Web and Python Developer from India.
                         <br>My technical interest lies in programming (python,JS),
                         Development (Web Applications). Have prior knowledge of Data Structure & Algorithms and
                         Full-Stack Development. 2 years Of experience in coding field and 1 year of experience in graphic designing. The Combination Of both The skills makes Me aside from the crowd of developers. A great
