--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                 all works related to <br> web development and ui design. </p>
             <a href="https://github.com//Lakshya8600"> Star On Github</a>
         </div>
-        <div class="images">
+<!--         <div class="images">
             <img src="images/shape.png" class="shape">
             <img src="images/girl.png" class="girl">
-        </div>
+        </div> -->
 
         <div class="social">
            <a href="#contact"><i class="fab fa-github  "></i></a>
