--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Lakshya Kumrawat | Full-Stack Developer">
-    <meta property="og:title" content="Lakshya Kumrawat| Full-Stack Developer">
+    <meta property="og:site_name" content="Lakshya Kumrawat | Full Stack Web Developer | Digital Marketer">
+    <meta property="og:title" content="Lakshya Kumrawat | Full Stack Web Developer | Digital Marketer">
     <meta property="og:url" content="LakshyaKumrawat.github.io">
     <meta property="og:description" content="A passionate Full-Stack Developer from India.">
     <meta property="article:publisher" content="LakshyaKumrawat.github.io">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@LakshyaKumrawat">
-    <meta name="twitter:title" content="Lakshya Kumrawat | Full Stack Web Developer">
-    <meta name="twitter:description" content="A passionate Full-Stack Developer from India.">
+    <meta name="twitter:title" content="Lakshya Kumrawat | Full Stack Web Developer | Digital Marketer">
+    <meta name="twitter:description" content="Full-Stack Developer & Digital Marketing from India.">
     <meta name="twitter:url" content="LakshyaKumrawat.netlify.app">
     <meta name="author" content=" Lakshya Kumrawat">
-    <meta name="description" content="A passionate Full-Stack Developer from India.">
+    <meta name="description" content="Full-Stack Developer & Digital Marketing from India.">
     <meta name="google-site-verification" content="WhJoPsq9RuFbk9Quv2zjHbtVbL2kPvoGB4cX41DolG8" />
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
@@ -44,7 +44,7 @@
     <link rel="stylesheet" media="screen and (max-width: 1000px ) and (min-width:901px)" href="style/tablet.css">
     <link rel="stylesheet" media="screen and (max-width: 1300px ) and (min-width:1001px)" href="style/largetablet.css">
     
-    <title>Lakshya Kumrawat | Full-Stack Developer</title>
+    <title>Lakshya Kumrawat | Full-Stack Developer | Digital Marketer </title>
 </head>
 
 <body><noscript>You need to enable JavaScript to run this app.</noscript>
@@ -98,12 +98,12 @@
             <div class="container">
                 <h1 class="header">About Me</h1>
                 <div class="content">
-                    <p> Myself Lakshya, a passionate <b>Full-Stack Web Developer , Python developer , Digital Marketer , Social Media Manager & SEO Specialist from India.</b>
+                    <p> Myself Lakshya, a passionate <b>Full-Stack Web & Python Developer , Digital Marketer & SEO Specialist from India.</b>
                         <br>My technical interest lies in programming (python,JS),
-                        Development (Web Applications) and Digital Marketing.2 years Of experience in coding field and 1 year of experience in graphic designing and Social Media Marketing. The Combination Of These skills makes Me aside from the crowd of developers. I Enjoy being challenged and working on projects that requires me to work
-                        outside my comfort and knowledge set, as well as continuing to learn new languages, design and Marketing techniques
+                        Development (Web Applications) and Digital Marketing. I have been coding since <b>November 2019</b>  exploring different technologies and have been engaged in Social Media Strategy analysis since <b>June 2021</b>. The Combination Of These skills makes Me aside from the crowd of Developers and Marketers. I Enjoy being challenged and working on projects that requires me to work
+                        outside my comfort and knowledge set, as well as continuing to learn new Frameworks, designs and Marketing techniques.
                         <br>Currently I am enhancing my knowledge in new fields such as blockchain, Organisational Marketing and much more . My goal is to Provide Value To People and in return , charge them an afforable amount to justify my value for work . And, my Long
-                        term goal is to become a more responsible and knowledgeable personality and in a respectable
+                        term goal is to become a more responsible and knowledgeable personality , in a respectable
                         position in my Field.</p>
                     <p>When not working or futzing around with code or Marketing, I study About Finance and Stock Market as i think that Investment is one of the essential things that one should definitly know.</p>
                     <p>I'm available for work, <a href="mailto:lakshyakumrawatbusiness@gmail.com" target="_blank">Mail Me </a> <br></p>
@@ -247,7 +247,7 @@
                         <h1 class="card-header">Digital Marketing</h1>
                         <div class="card-content">
                             <div><img class="skill-img" alt="node"
-                                    src="https://freesvg.org/img/1534129544.png">
+                                    src="https://freesvg.org/img/1534129544.png ">
                                 <p class="skill-name">GOOGLE</p>
                             </div>
                             <div><img class="skill-img" alt="mongodb"
